Fix sticky table z-index issue

--- a/src/ui/index.sass
+++ b/src/ui/index.sass
@@ -30,7 +30,7 @@ table.tree-table
     position: sticky;
     background-color: white;
     top: 0
-    z-index: 9999;
+    z-index: 10;
 
   span[data-tooltip]
     border: none;
